Fix Landingpage Avater Overflow after animation

--- a/src/styles.css
+++ b/src/styles.css
@@ -419,7 +419,6 @@ label {
   width: 100%;
   height: 100%;
   position: relative;
-  z-index: 1;
 }
 
 .user-image i,
@@ -444,6 +443,6 @@ app-home,
 app-create-project,
 app-searchresults
  {
-  margin-bottom: 150px;
+  margin-bottom: 150px !important;
   display: block;
 }
